[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/font/sarpanch-regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 14.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -21.5
margin_right = 58.0
margin_bottom = 21.5
custom_fonts/font = SubResource( 1 )
text = "Ready?"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="GoTimer" to="." method="_on_GoTimer_timeout"]
